--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
             <h2>Mensaje para Breezy</h2>
             <p>Breezy, esperamos que tu día esté lleno de alegría y risas. ¡Te queremos mucho!</p>
         </section>
+        
+        <div id="countdown"></div>
     </main>
 
     <footer>
         <p>&copy; 2024 Celebrando a Breezy</p>
     </footer>
+    
+    <script src="script.js"></script>
 </body>
 </html>
